Se agregan etiquetas SEO, optimización de imágenes y correción de etiquetas semánticas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Sebastian Araya's Portfolio | Made with HTML, CSS & GIT</title>
+    <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
+    <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
 <body>
 <!-- ENCABEZADO -->
@@ -49,7 +51,7 @@
         <section class="container-fluid aboutMeSection d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5 aboutMeContainer">
                 <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center align-items-center" data-aos="fade-right" data-aos-duration="1500">
-                    <p class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></p>
+                    <h1 class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></h1>
                     <p class="aboutMeText fs-5 my-4">Graduate in Computer Engineering and Full Stack Developer career's student at Coderhouse.</p>
                     <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center gap-3">
                         <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
@@ -61,7 +63,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-flex justify-content-center">
-                    <img class="profilePicture img-fluid" src="./assets/perfil.jpeg" alt="Profile picture">
+                    <img class="profilePicture img-fluid" src="./assets/perfil.webp" alt="Profile picture">
                 </div>
             </div>
         </section>       
@@ -75,7 +77,7 @@
             <div class="row row-gap-2">
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #1</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +87,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #2</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -95,7 +97,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="./assets/web-frame.png" class="card-img-top" alt="Project preview">
+                        <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Project #3</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,7 +117,7 @@
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center row-gap-2">
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/html.png" class="img-fluid card-img-top" alt="HTML image">
+                        <img src="assets/html.webp" class="img-fluid card-img-top" alt="HTML image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">HTML</h5>
                             <p class="card-text text-center">Proficient in HTML, adept at creating and structuring web content using tags, links, images, and forms, while maintaining clean and semantic code for enhanced online accessibility and presentation.</p>
@@ -124,7 +126,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/css.png" class="img-fluid card-img-top" alt="CSS image">
+                        <img src="assets/css.webp" class="img-fluid card-img-top" alt="CSS image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">CSS</h5>
                             <p class="card-text text-center">Proficient in web design with CSS, experienced in styling, layout, and responsive design to ensure an appealing online presentation.</p>
@@ -133,7 +135,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-center">
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
-                        <img src="assets/git.png" class="img-fluid card-img-top" alt="GIT image">
+                        <img src="assets/git.webp" class="img-fluid card-img-top" alt="GIT image">
                         <div class="card-body">
                             <h5 class="fw-bold text-center">GIT</h5>
                             <p class="card-text text-center">Proficient in Git for version control, collaboration, and tracking changes in software projects.</p>
