--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>About me | Made with HTML, CSS & GIT</title>
+    <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
+    <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
 <body class="d-flex flex-column justify-content-between">
     <!-- ENCABEZADO -->
@@ -53,14 +55,14 @@
                     </p>
                     <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center">
                         <div class="col-sm-6 col-md-6 col-lg-6 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                            <img src="../assets/image-picture.png" class="imgPicture" alt="">
-                            <img src="../assets/image-picture.png" class="imgPicture" alt="">
+                            <img src="../assets/image-picture.webp" class="imgPicture" alt="">
+                            <img src="../assets/image-picture.webp" class="imgPicture" alt="">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13026967.38926922!2d-106.25428513633595!3d37.142902825634486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses-419!2scl!4v1693375040349!5m2!1ses-419!2scl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3 col-md-3 col-lg-3 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                    <img src="../assets/person.png" class="personPicture img-fluid" alt="Profile picture">
+                    <img src="../assets/person.webp" class="personPicture img-fluid" alt="Profile picture">
                 </div>
             </div>
         </section>
