--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>Portfolio | Made with HTML, CSS & GIT</title>
+    <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
+    <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
 <body class="d-flex flex-column justify-content-between">
     <!-- ENCABEZADO -->
@@ -60,7 +62,7 @@
                                     <h2>Project #1</h2>
                                 </div>
                                 <div class="webPreviewPortfolioContainer">
-                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.webp" alt="Web preview">
                                 </div>
                                 <div class="linkContainer">
                                     <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
@@ -74,7 +76,7 @@
                                     <h2>Project #2</h2>
                                 </div>
                                 <div class="webPreviewPortfolioContainer">
-                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.webp" alt="Web preview">
                                 </div>
                                 <div class="linkContainer">
                                     <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
@@ -90,7 +92,7 @@
                                     <h2>Project #3</h2>
                                 </div>
                                 <div class="webPreviewPortfolioContainer">
-                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.webp" alt="Web preview">
                                 </div>
                                 <div class="linkContainer">
                                     <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
@@ -104,7 +106,7 @@
                                     <h2>Project #4</h2>
                                 </div>
                                 <div class="webPreviewPortfolioContainer">
-                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.png" alt="Web preview">
+                                    <img class="webPreviewImagePortfolio" src="../assets/web-frame.webp" alt="Web preview">
                                 </div>
                                 <div class="linkContainer">
                                     <a href="https://github.com/sebastianarayaq" target="_blank"><img class="linkIcon" src="../assets/github.svg" alt="Github icon"></a>
