--- a/pages/skills.html
+++ b/pages/skills.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>Skills | Made with HTML, CSS & GIT</title>
+    <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
+    <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
 <body class="d-flex flex-column justify-content-between">
     <!-- ENCABEZADO -->
@@ -60,21 +62,21 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active text-center">
-                                    <img src="../assets/html.png" class="img-fluid" alt="HTML Logo">
+                                    <img src="../assets/html.webp" class="img-fluid" alt="HTML Logo">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>HTML</h2>
                                         <p>Well-structured web content with clean, semantic code for accessibility and presentation.</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item text-center">
-                                    <img src="../assets/css.png" class="img-fluid" alt="CSS Logo">
+                                    <img src="../assets/css.webp" class="img-fluid" alt="CSS Logo">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>CSS</h2>
                                         <p>Styling, layout, and responsive design to ensure an appealing online presentation.</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item text-center">
-                                    <img src="../assets/git.png" class="img-fluid" alt="Git Logo">
+                                    <img src="../assets/git.webp" class="img-fluid" alt="Git Logo">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>GIT</h2>
                                         <p>Version control, collaboration, and tracking changes in software projects.</p>
