--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+    <title>Contact me | Made with HTML, CSS & GIT</title>
+    <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
+    <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
 <body class="d-flex flex-column justify-content-between">
     <!-- ENCABEZADO -->
@@ -47,33 +49,33 @@
         <div class="container-fluid p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
                 <div class="col-sm-8 col-md-8 col-lg-8">
-                    
-                    <h1 class="text-center fw-bold">Send me a message</h1>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Full name" aria-label="Username" aria-describedby="basic-addon1">
-                    </div>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">@</span>
-                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Email" aria-label="Username">
-                        <span class="input-group-text">@</span>
-                        <input type="text" class="form-control" placeholder="Domain" aria-label="Server">
-                    </div>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text">Message</span>
-                        <textarea class="form-control" aria-label="With textarea"></textarea>
-                    </div>
-                    <div class="text-center">
-                        <button class="btn btn-dark">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-check" viewBox="0 0 16 16">
-                                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855a.75.75 0 0 0-.124 1.329l4.995 3.178 1.531 2.406a.5.5 0 0 0 .844-.536L6.637 10.07l7.494-7.494-1.895 4.738a.5.5 0 1 0 .928.372l2.8-7Zm-2.54 1.183L5.93 9.363 1.591 6.602l11.833-4.733Z"/>
-                                <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
-                            </svg> Send
-                        </button>
-                    </div>
-
+                    <form action="" method="post">
+                        <h1 class="text-center fw-bold">Send me a message</h1>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="fullname" placeholder="Full name" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <input type="text" class="form-control" name="username" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="email" placeholder="Email" aria-label="Username">
+                            <span class="input-group-text">@</span>
+                            <input type="text" class="form-control" name="domain" placeholder="Domain" aria-label="Server">
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">Message</span>
+                            <textarea class="form-control" name="message" aria-label="With textarea"></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button class="btn btn-dark">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-check" viewBox="0 0 16 16">
+                                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855a.75.75 0 0 0-.124 1.329l4.995 3.178 1.531 2.406a.5.5 0 0 0 .844-.536L6.637 10.07l7.494-7.494-1.895 4.738a.5.5 0 1 0 .928.372l2.8-7Zm-2.54 1.183L5.93 9.363 1.591 6.602l11.833-4.733Z"/>
+                                    <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-1.993-1.679a.5.5 0 0 0-.686.172l-1.17 1.95-.547-.547a.5.5 0 0 0-.708.708l.774.773a.75.75 0 0 0 1.174-.144l1.335-2.226a.5.5 0 0 0-.172-.686Z"/>
+                                </svg> Send
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
