Se agrega favicon

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/code.svg" type="image/x-icon">
     <title>Contact me | Made with HTML, CSS & GIT</title>
     <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
     <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
