--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <button type="button" class="btn btn-dark">Download CV</button>
                         </div>
                         <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-end">
-                            <a class="btn btn-dark" href="./pages/about-me.html">Read more</a>
+                            <a class="btn btn-dark" href="./pages/about-me.html">More about me</a>
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Project #1</h5>
+                            <h3 class="card-title fw-bold">Project #1</h3>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Project #2</h5>
+                            <h3 class="card-title fw-bold">Project #2</h3>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
@@ -100,7 +100,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
-                            <h5 class="card-title fw-bold">Project #3</h5>
+                            <h3 class="card-title fw-bold">Project #3</h3>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
@@ -120,7 +120,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/html.webp" class="img-fluid card-img-top" alt="HTML image">
                         <div class="card-body">
-                            <h5 class="fw-bold text-center">HTML</h5>
+                            <h3 class="fw-bold text-center">HTML</h3>
                             <p class="card-text text-center">Proficient in HTML, adept at creating and structuring web content using tags, links, images, and forms, while maintaining clean and semantic code for enhanced online accessibility and presentation.</p>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/css.webp" class="img-fluid card-img-top" alt="CSS image">
                         <div class="card-body">
-                            <h5 class="fw-bold text-center">CSS</h5>
+                            <h3 class="fw-bold text-center">CSS</h3>
                             <p class="card-text text-center">Proficient in web design with CSS, experienced in styling, layout, and responsive design to ensure an appealing online presentation.</p>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                     <div class="card d-flex d-flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/git.webp" class="img-fluid card-img-top" alt="GIT image">
                         <div class="card-body">
-                            <h5 class="fw-bold text-center">GIT</h5>
+                            <h3 class="fw-bold text-center">GIT</h3>
                             <p class="card-text text-center">Proficient in Git for version control, collaboration, and tracking changes in software projects.</p>
                         </div>
                     </div>
