Se agregan mixin para shake-animation y opacity, ademas se modifica parrafo de las cards en projects

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h3 class="card-title fw-bold">Project #1</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Project made with HTML, CSS, SASS, animation libraries, GIT and GITHUB.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h3 class="card-title fw-bold">Project #2</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Project made with HTML, CSS, SASS, animation libraries, GIT and GITHUB.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                         <img src="./assets/web-frame.webp" class="card-img-top" alt="Project preview">
                         <div class="card-body">
                             <h3 class="card-title fw-bold">Project #3</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Project made with HTML, CSS, SASS, animation libraries, GIT and GITHUB.</p>
                             <a href="./pages/portfolio.html" class="btn btn-dark">More projects</a>
                         </div>
                     </div>
