--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="description" content="Explore my web development portfolio, showcasing creative and functional projects built with HTML, CSS, and Git. Discover my expertise in web design and front-end development as you browse through my highlighted work and skills.">
     <meta name="keywords" content="Portfolio, HTML, Web developer, CSS, SASS, GIT, Github, Skills, Full-Stack Developer, Coderhouse student, Web development">
 </head>
-<body>
-<!-- ENCABEZADO -->
+<body class="d-flex flex-column justify-content-between">
+    <!-- ENCABEZADO -->
     <header>
         <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
@@ -45,9 +45,6 @@
                 </div>
             </div>
         </nav>
-    </header>
-<!-- SECCIONES -->
-    <main>
         <!-- ABOUT ME -->
         <section class="container-fluid aboutMeSection d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5 aboutMeContainer">
@@ -67,7 +64,10 @@
                     <img class="profilePicture img-fluid" src="./assets/perfil.webp" alt="Profile picture">
                 </div>
             </div>
-        </section>       
+        </section>     
+    </header>
+    <!-- SECCIONES -->
+    <main>  
         <!-- PORTFOLIO -->
         <section class="container-fluid p-4 my-3">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
@@ -183,7 +183,7 @@
             </div>
         </div>
     </footer>
-
+    <!-- SCRIPT AON -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
