Se agregan mejoras a estilos y textos alternativos a las imagenes

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="./skills.html">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./skills.html">Contact</a>
+                            <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -52,12 +52,18 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">
                     <h1 class="fw-bold">About me</h1>
                     <p class="my-4 textDescription">
-                        I'm Sebastián Araya, a computer engineer on an exciting journey toward becoming a full-stack developer at Coderhouse. My current focus lies in HTML, CSS, and Git, and I'm continually expanding my skills to become a Full Stack developer. What motivates me the most is the ability to bring all my ideas to life and provide real value through my projects. Graduated in Computer Engineering from Duoc UC, I'm well-versed in agile methodologies and am already working on my first projects. Besides my love for development, I enjoy playing video games in my free time.
+                        I'm Sebastián Araya, a computer engineer on an exciting journey toward becoming a full-stack developer at Coderhouse. My current focus lies in HTML, CSS, and Git, and I'm continually expanding my skills to become a Full Stack developer. 
+                    </p>
+                    <p class="my-4 textDescription">
+                        What motivates me the most is the ability to bring all my ideas to life and provide real value through my projects. Graduated in Computer Engineering from Duoc UC, I'm well-versed in agile methodologies and am already working on my first projects. 
+                    </p>
+                    <p class="my-4 textDescription">
+                        Besides my love for development, I enjoy playing video games in my free time.
                     </p>
                     <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center">
                         <div class="col-sm-6 col-md-6 col-lg-6 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
-                            <img src="../assets/image-picture.webp" class="imgPicture" alt="">
-                            <img src="../assets/image-picture.webp" class="imgPicture" alt="">
+                            <img src="../assets/image-picture.webp" class="imgPicture" alt="Picture about me doing anything">
+                            <img src="../assets/image-picture.webp" class="imgPicture" alt="Another picture of me doing another thing">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13026967.38926922!2d-106.25428513633595!3d37.142902825634486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sEstados%20Unidos!5e0!3m2!1ses-419!2scl!4v1693375040349!5m2!1ses-419!2scl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
