--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="d-flex flex-column justify-content-between">
     <!-- ENCABEZADO -->
-    <header>
+    <header class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">S<span class="brandSpan">A</span></a>
@@ -46,16 +46,16 @@
             </div>
         </nav>
         <!-- ABOUT ME -->
-        <section class="container-fluid aboutMeSection d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center p-4">
-            <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-around align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5 aboutMeContainer">
+        <section class="container-fluid d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center p-4 flex-fill aboutMeSection">
+            <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-between align-items-center flex-wrap-reverse mx-4 my-3 row-gap-5">
                 <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex-columm d-md-flex-columm d-lg-flex-columm justify-content-center align-items-center" data-aos="fade-right" data-aos-duration="1500">
                     <h1 class="fs-2 text-center">Hi I'm <span class="brandSpan fs-2">Sebastián Araya</span></h1>
                     <p class="aboutMeText fs-5 my-4">Graduate in Computer Engineering and Full Stack Developer career's student at Coderhouse.</p>
-                    <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center gap-3">
-                        <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex">
+                    <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center gap-3">
+                        <div class="col-sm-4 col-md-4 col-lg-4 d-flex d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
                             <button type="button" class="btn btn-dark">Download CV</button>
                         </div>
-                        <div class="col-sm-4 col-md-4 col-lg-4 d-sm-flex d-md-flex d-lg-flex justify-content-end">
+                        <div class="col-sm-4 col-md-4 col-lg-4 d-flex d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
                             <a class="btn btn-dark" href="./pages/about-me.html">More about me</a>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center text-center">
-                    <div class="col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1400">
                         <a href="./pages/skills.html" class="btn btn-dark">More skills</a>
                     </div>
                 </div>
@@ -187,7 +187,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            offset: 200
         });
     </script>
 </body>
