--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
     <main>
         <div class="container-fluid p-4">
             <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
-                <div class="col-sm-8 col-md-8 col-lg-8">
+                <div class="col-sm-8 col-md-8 col-lg-8 box-shadow p-4">
                     <form action="" method="post">
                         <h1 class="text-center fw-bold">Send me a message</h1>
                         <div class="input-group mb-3">
