--- a/pages/skills.html
+++ b/pages/skills.html
@@ -48,10 +48,9 @@
     <!-- SECCIONES -->
     <main>
         <section>
-
             <div class="container-fluid p-4">
                 <div class="row d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
-                    <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center">
+                    <div class="col-sm-5 col-md-5 col-lg-5 d-sm-flex d-md-flex d-lg-flex justify-content-center align-items-center text-center">
                         <h1 class="fw-bold">My Skills</h1>
                     </div>
                     <div class="col-sm-8 col-md-8 col-lg-8">
